gmt (5.4.0+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Add libcurl4-gnutls-dev | libcurl-ssl-dev to build dependencies.

 -- Bas Couwenberg <sebastic@debian.org>  Tue, 09 May 2017 07:41:11 +0200

gmt (5.3.3+dfsg-1~exp1) experimental; urgency=medium

  * New upstream release.

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 23 Mar 2017 22:53:33 +0100

gmt (5.3.2+dfsg-1~exp2) experimental; urgency=medium

  * Move supplements plugin from libgmt-dev to gmt package.
    See: http://gmt.soest.hawaii.edu/issues/972#note-8

 -- Bas Couwenberg <sebastic@debian.org>  Mon, 20 Mar 2017 21:21:22 +0100

gmt (5.3.2+dfsg-1~exp1) experimental; urgency=medium

  * New upstream release.
  * Update copyright years for copyright holders.
  * Drop spelling-errors.patch, applied upstream.
  * Update symbols for 5.3.2.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 26 Feb 2017 12:11:15 +0100

gmt (5.3.1+dfsg-2) unstable; urgency=medium

  * Use dh_auto_{clean,build,install} instead of custom commands.
  * Drop disable-examples.patch, no longer causes FTBFS.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 05 Nov 2016 13:27:49 +0100

gmt (5.3.1+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Update Homepage URL to not include 'projects/gmt' path.
  * Update copyright file, changes:
    - Update copyright years for copyright holders
    - Add Dongdong Tian to copyright holders
  * Drop patches applied upstream. Refresh remaining patches.
  * Drop custom coastline.conf, not installed.
  * Update gmt-config manpage for upstream changes.
  * Update symbols for version 5.3.1.
  * Add patch to fix spelling errors.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 22 Oct 2016 13:03:41 +0200

gmt (5.2.1+dfsg-7) unstable; urgency=medium

  * Add patch to fix FTBFS with glibc 2.23.
    (closes: #818807)

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 07 Jul 2016 18:13:57 +0200

gmt (5.2.1+dfsg-6) unstable; urgency=medium
