@@ -2,6 +2,7 @@ gmt (5.4.0+dfsg-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Add libcurl4-gnutls-dev | libcurl-ssl-dev to build dependencies.
+  * Refresh patches.
 
  -- Bas Couwenberg <sebastic@debian.org>  Tue, 09 May 2017 07:41:11 +0200
 
